--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -5,15 +5,29 @@ body {
     text-align: center;
     font-family: Verdana;
     font-weight: normal;
+    color: white;
 }
-/* HEADER */
-
+/* top header */
 h1 {
     font-size: 50px;
-    color: white;
 }
 
 p {
     color: aquamarine;
     font-size: 16px
+}
+
+/* midpage header text */
+h2 {
+    font-weight: 300px;
+    font-size: 42px;
+}
+
+.mid p {
+    font-size: 21px;
+    color: gray;
+}
+
+img {
+    margin: 0 auto;
 }
